--- a/code/eda-code/eda.qmd
+++ b/code/eda-code/eda.qmd
@@ -1,22 +1,13 @@
 ---
-title: "An example exploratory analysis script"
+title: "Exploratory Data Analysis"
 date: "2024-02-07"
+author: Nicholas Stevenson
 output: html_document
 ---
 
   
-  
 This Quarto file loads the cleaned data and does some exploring.
 
-I'm only showing it the way where the code is included in the file. 
-As described in the `processing_code` materials, I currently prefer the approach of having R code in a separate file and pulling it in.
-
-But I already had this written and haven't yet re-done it that way. Feel free to redo and send a pull request on GitHub :)
-
-Again, it is largely a matter of preference and what makes the most sense to decide if one wants to have code inside Quarto files, or as separate R files.
-And sometimes, an R script with enough comments is good enough and one doesn't need a Quarto file.
-
-Also note that while here I split cleaning and exploring, this is iterative. You saw that as part of the processing, we already had to explore the data somewhat to understand how to clean it. In general, as you explore, you'll find things that need cleaning. As you clean, you can explore more. Therefore, at times it might make more sense to combine the cleaning and exploring code parts into a single R or Quarto file. Or split things in any other logical way.
 
 As part of the exploratory analysis, you should produce plots or tables or other summary quantities for the most interesting/important quantities in your data. Depending on the total number of variables in your dataset, explore all or some of the others. Figures produced here might be histograms or density plots, correlation plots, etc. Tables might summarize your data.
 
@@ -26,12 +17,17 @@ Plots produced here can be scatterplots, boxplots, violinplots, etc. Tables can 
 
 # Setup
 
-```{r}
+```{r, message=FALSE, warning=FALSE, results='hide'}
 #load needed packages. make sure they are installed.
 library(here) #for data loading/saving
 library(dplyr)
+library(scales)
+library(formattable)
 library(skimr)
+library(ggimage)
 library(ggplot2)
+library(readr)
+library(readxl)
 ```
 
 
@@ -39,13 +35,11 @@ Load the data.
 
 ```{r}
 #Path to data. Note the use of the here() package and not absolute paths
-data_location <- here::here("data","processed-data","processeddata.rds")
+data_location <- here::here("data","raw-data","NFL_data.xlsx")
 #load data
-mydata <- readRDS(data_location)
+nfl <- read_excel(data_location)
+nfl
 ```
-
-
-
 
 
 # Data exploration through tables
@@ -54,7 +48,7 @@ Showing a bit of code to produce and save a summary table.
 
 
 ```{r}
-summary_df = skimr::skim(mydata)
+summary_df = skimr::skim(nfl)
 print(summary_df)
 # save to file
 summarytable_file = here("results", "tables", "summarytable.rds")
@@ -66,47 +60,102 @@ We are saving the results to the `results` folder. Depending on how many tables/
 
 # Data exploration through figures
 
-Histogram plots for the continuous outcomes. 
+Bar plots for the continuous outcomes. 
 
-Height first.
+Wins first.
 
-```{r}
-p1 <- mydata %>% ggplot(aes(x=Height)) + geom_histogram() 
+```{r, message=FALSE}
+p1 <- nfl %>% 
+  ggplot(aes(x=Wins)) +
+  geom_bar(fill="steel blue") 
 plot(p1)
-figure_file = here("results", "figures","height-distribution.png")
+figure_file = here("results", "figures","Wins-distribution.png")
 ggsave(filename = figure_file, plot=p1) 
 ```
 
-Now weights.
+Now Active Salary
 
-```{r}
-p2 <- mydata %>% ggplot(aes(x=Weight)) + geom_histogram() 
+```{r, message=FALSE}
+p2 <- nfl %>% 
+  ggplot(aes(x=reorder(Team, `ACTIVE53MAN`), y = `ACTIVE53MAN`)) +
+  geom_bar(stat = "identity", fill="darkgreen") +
+  coord_flip() +
+  labs(title = "Active Salary by Team", x = "Team", y = "Active Salary")
 plot(p2)
-figure_file = here("results", "figures","weight-distribution.png")
+
+figure_file = here("results", "figures","Salary-distribution.png")
 ggsave(filename = figure_file, plot=p2) 
 ```
 
-Now height as function of weight.
+# create median variables
+```{r}
+median_points_for <- median(nfl$Points_For)
+median_points_for
+
+median_points_against <- median(nfl$Points_Against)
+median_points_against
+
+median_wins <- median(nfl$Wins)
+median_wins
+```
+
+# create images
+```{r}
+nfl$image_file <- paste0("team_images/", nfl$Team, ".png")
+summary(nfl$image_file)
+```
 
 ```{r}
-p3 <- mydata %>% ggplot(aes(x=Height, y=Weight)) + geom_point() + geom_smooth(method='lm')
+points_for_wins <- nfl %>% 
+  ggplot(aes(Wins,Points_For))+
+  geom_point()+
+  xlim(2,16)+
+  ylim(175,575)+
+  geom_hline(yintercept=365)+
+  geom_vline(xintercept=9) +
+  geom_image(aes(image = image_file), size = 0.03, asp = 4.0)
+
+points_for_wins
+```
+
+```{r}
+points_against_wins <- nfl %>% 
+  ggplot(aes(Wins,Points_Against))+
+  geom_point()+
+  xlim(2,16)+
+  ylim(175,575)+
+  geom_hline(yintercept = 369)+
+  geom_vline(xintercept = 9)+
+  geom_image(aes(image=image_file), size = 0.03, asp = 4.0)
+
+points_against_wins
+```
+
+```{r}
+points_for_against <- nfl %>% 
+  ggplot(aes(Points_For, Points_Against))+
+  geom_point()+
+  xlim(175,575)+
+  ylim(175,575)+
+  geom_hline(yintercept=369)+
+  geom_vline(xintercept=365)+
+  geom_image(aes(image = image_file), size = 0.03, asp = 4.0)
+
+points_for_against
+```
+
+Plot wins as a function of salary
+```{r, message=FALSE}
+p3 <- nfl %>%
+  ggplot(aes(x=`Wins`, y=`ACTIVE53MAN`))+
+  geom_point() +
+  geom_smooth(method='lm')
 plot(p3)
-figure_file = here("results", "figures", "height-weight.png")
+figure_file = here("results", "figures", "Wins-Salary.png")
 ggsave(filename = figure_file, plot=p3) 
 ```
 
-Once more height as function of weight, stratified by gender. Note that there is so little data, it's a bit silly. But we'll plot it anyway.
 
-```{r}
-p4 <- mydata %>% ggplot(aes(x=Height, y=Weight, color = Gender)) + geom_point() + geom_smooth(method='lm')
-plot(p4)
-figure_file = here("results", "figures", "height-weight-stratified.png")
-ggsave(filename = figure_file, plot=p4) 
-```
-
-
-
-# Notes
 
 For your own explorations, tables and figures can be "quick and dirty". As long as you can see what's going on, there is no need to polish them. That's in contrast to figures you'll produce for your final products (paper, report, presentation, website, etc.). Those should look as nice, polished and easy to understand as possible.
 
